--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,7 @@
 {
     "tasks": {
       "start": "deno run --allow-all --unstable ./src/main.ts",
-      "dev": "deno run --allow-all --unstable --watch ./src/main.ts"
+      "dev": "deno run --allow-all --unstable --watch ./src/main.ts",
+      "generate": "deno run --allow-all --unstable ./generate.ts"
     }
   }
